--- a/src/components/DetailCard/detailCard.scss
+++ b/src/components/DetailCard/detailCard.scss
@@ -1,22 +1,61 @@
+$border-color: #ebebeb;
+
 .detail-card-container {
+  overflow: hidden;
+  white-space: nowrap;
+  overflow: hidden;
+
+  .detail-card-header {
+    color: inherit;
+    border-bottom: 1px solid $border-color;
+    border-top-left-radius: calc(0.3rem - 1px);
+    border-top-right-radius: calc(0.3rem - 1px);
+    font-weight: 700;
+    min-height: 66px;
+    width: 100%;
+    white-space: pre-wrap;
+  }
+
+  .detail-card-body {
+    opacity: 0.7;
+    width: 100%;
+    white-space: pre-wrap;
+  }
+
   &-left {
-    box-shadow: -3px 3px 4px 1px #40514e;
-    -webkit-box-shadow: -5px 4px 0px 1px #40514e;
-    transform: rotate3d(0, 2, 0, 35deg);
+    // box-shadow: -3px 3px 4px 1px $border-color;
+    // -webkit-box-shadow: -3px 3px 4px 1px $border-color;
+    transform: rotate3d(0, 2, 0, 15deg);
+    border-radius: 5px;
+    text-align: left;
   }
   &-right {
-    box-shadow: 3px 3px 4px 1px #40514e;
-    -webkit-box-shadow: 5px 4px 0px 1px #40514e;
-    transform: rotate3d(0, 2, 0, -35deg);
+    // box-shadow: 3px 3px 4px 1px $border-color;
+    // -webkit-box-shadow: 3px 3px 4px 1px $border-color;
+    transform: rotate3d(0, 2, 0, -15deg);
+    border-radius: 5px;
+    text-align: right;
   }
   &-top {
-    box-shadow: -2px -3px 4px 1px #40514e;
-    -webkit-box-shadow: -2px -3px 0px 1px #40514e;
-    transform: rotate3d(2, 0, 0, -35deg);
+    // box-shadow: -2px -3px 4px 1px $border-color;
+    // -webkit-box-shadow: -2px -3px 0px 1px $border-color;
+    transform: rotate3d(2, 0, 0, -15deg);
+    border-radius: 5px;
+    text-align: center;
   }
   &-bottom {
-    box-shadow: -2px 3px 4px 1px #40514e;
-    -webkit-box-shadow: -2px 3px 4px 1px #40514e;
-    transform: rotate3d(2, 0, 0, 35deg);
+    // box-shadow: -2px 3px 4px 1px $border-color;
+    // -webkit-box-shadow: -2px 3px 4px 1px $border-color;
+    transform: rotate3d(2, 0, 0, 15deg);
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  li {
+    list-style-type: none;
+  }
+  ul {
+    padding-inline-start: 0px;
+    margin: 0;
   }
 }
