--- a/src/components/TableTemplate/tableTemplate.scss
+++ b/src/components/TableTemplate/tableTemplate.scss
@@ -1,11 +1,13 @@
 .table-template-container {
   width: 100%;
   caption-side: bottom;
+  border-top: 1px dashed #ebebeb;
+  border-bottom: 1px dashed #ebebeb;
 
   thead {
     border-bottom: 1px solid #ebebeb;
     th {
-      opacity: 0.3;
+      opacity: 0.5;
       font-weight: 100;
     }
   }
@@ -13,7 +15,7 @@
   td,
   th,
   .caption-td {
-    padding: 5px 10px;
+    padding: 10px 10px;
     text-align: left;
   }
 
