--- a/src/css/containers.scss
+++ b/src/css/containers.scss
@@ -13,19 +13,21 @@
   flex-flow: row wrap;
   flex-wrap: wrap;
   overflow-y: auto;
+  justify-content: center;
 
   .flexcontainer-block {
     display: inline-block;
-    margin: 10px 0px;
     & > div {
       margin: 10px;
+    }
+    & > table {
+      margin: 10px 0;
     }
   }
 
   @media screen and (min-width: 320px) {
     .xs-12 {
       width: 100%;
-      // flex: 0 0 100%;
     }
 
     .xs-10 {
@@ -36,12 +38,12 @@
     }
     .xs-6 {
       width: 50%;
-      // flex: 0 0 50%;
     }
-
+    .xs-4 {
+      width: 33.3%;
+    }
     .xs-3 {
       width: 25%;
-      // flex: 0 0 50%;
     }
     .xs-2 {
       width: 16.6%;
@@ -51,7 +53,6 @@
   @media screen and (min-width: 961px) {
     .sm-12 {
       width: 100%;
-      // flex: 0 0 100%;
     }
 
     .sm-10 {
@@ -62,11 +63,12 @@
     }
     .sm-6 {
       width: 50%;
-      // flex: 0 0 50%;
+    }
+    .sm-4 {
+      width: 33.3%;
     }
     .sm-3 {
       width: 25%;
-      // flex: 0 0 50%;
     }
 
     .sm-2 {
@@ -77,7 +79,6 @@
   @media screen and (min-width: 1300px) {
     .md-12 {
       width: 100%;
-      // flex: 0 0 100%;
     }
 
     .md-10 {
@@ -87,14 +88,14 @@
     .md-8 {
       width: 66.6%;
     }
-
+    .md-4 {
+      width: 33.3%;
+    }
     .md-6 {
       width: 50%;
-      // flex: 0 0 50%;
     }
     .md-3 {
       width: 25%;
-      // flex: 0 0 50%;
     }
     .md-2 {
       width: 16.6%;
