UI paddings, detail card signature

--- a/src/components/DetailCard/detailCard.scss
+++ b/src/components/DetailCard/detailCard.scss
@@ -28,6 +28,9 @@ $border-color: #ebebeb;
     opacity: 0.5;
     width: 100%;
     white-space: pre-wrap;
+    margin: 10px 0px;
+    line-height: 20px;
+    font-size: 16px;
   }
 
   &-left {
